maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: not enough arguments for method indiqueLeReste: (x: Int, y: Int)Unit.
Unspecified value parameter y.
  indiqueLeReste(trouveBiscuit())
                ^JediEscaper:27: error: not enough arguments for method min: (a: Int, b: Int)Int.
Unspecified value parameter b.
  return min((min(x,y),min(a,b)))
            ^JediEscaper:49: error: not found: value caseVoisineLaPlusProche
    temp=caseVoisineLaPlusProche(x,y)
         ^JediEscaper:50: error: type mismatch;
 found   : (Int, Int)
 required: plm.universe.Direction
    setDirection(temp)
                 ^